# fso-ethernet-transceiver

./: .gitignore  README.md
cad/optical-testing/: MTPD3001 Stand Back.SLDPRT  MTPD3001D3-030.SLDPRT  OPV300 Stand.SLDDRW  OPV300 Stand.SLDPRT
cad/optical-testing-models/: MTPD3001 Stand Middle.SLDPRT  MTPD3001 Stand.SLDPRT  OPV300.SLDPRT  PD Stand Print.SLDASM  PD1.SLDPRT  PD2.SLDPRT  PD3.SLDPRT
circuits/schematics/: FSOCom.kicad_sch  laser-driver.kicad_sch  photodiode-array.kicad_sch  phy-interface.kicad_sch  power.kicad_sch
computational/monte-carlo-ray-tracing/: main.cpp
computational/solar-irradiance-modeling/: solar-irradiance-modeling.R
docs/: block-diagram.drawio
electrical/arduino-tests/laser-blink/: laser-blink.ino
electrical/arduino-tests/photodiode-read/: photodiode-read.ino
electrical/circuits/: FSOCom.kicad_pcb  FSOCom.kicad_pro  FSOCom.kicad_sch  FSOComspice.cir  laser-driver.kicad_sch  photodiode-array.kicad_sch  phy-interface.kicad_sch  power.kicad_sch
electrical/prototype/: calculate_ber.m  decoder.m  prototype_blink.mat  prototype_off.mat  prototype_on.mat
electrical/signal-data/: analyze_trial.m  calculate_ber.m  record_all_trials.m  record_serial_data.m  sliding_mean_threshold.m  trial_data.mat  uniform.mat
electrical/symbols/: MACHXO3.kicad_sym
embedded/: signal-processing-model.slx
mechanical/optical-testing/: MTPD3001 Stand Front.SLDPRT  OPV300 Stand Assembly.SLDASM  pd-stand-for-testing.SLDPRT
optics/: README.md
optics/monte-carlo-ray-tracing/: CMakeLists.txt
optics/solar-irradiance-modeling/: .Rhistory
(+2 files in other folders)
